src/objects/Budget_Line__c.object
<CustomObject>
    <description>Level 3 of the budgeting and planning hierarchy</description>
    <fields>
        <fullName>Annual_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if your budget is associated to an Annual PR</inlineHelpText>
        <label>Annual Budget?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Amount__c</fullName>
        <label>Budget Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Owner__c</fullName>
        <inlineHelpText>The person responsible for this budget line</inlineHelpText>
        <label>Budget Line Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <inlineHelpText>For Admin Use Only</inlineHelpText>
        <label>Budget Type</label>
        <picklist>
            <picklistValues>
                <fullName>Development Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Budget_Amount__c</fullName>
        <label>Contractor Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxembourg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Period__c</fullName>
        <label>End Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_PR__c</fullName>
        <label>Expected PR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Quarters__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of quarters this recurring budget will be repeated</inlineHelpText>
        <label># of Quarters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Budget_Line_Amount__c</fullName>
        <label>Original Budget Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Retainer_Budget__c</fullName>
        <label>Original Retainer Budget</label>
        <referenceTo>Budget_Line__c</referenceTo>
        <relationshipLabel>Budget Lines</relationshipLabel>
        <relationshipName>Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>Program_Budget__r.Budget_Owner__r.Period__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Budget_Amount__c</fullName>
        <formula>Program_Budget__r.Program_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Budget__c</fullName>
        <label>Program Budget</label>
        <referenceTo>Program_Budget__c</referenceTo>
        <relationshipLabel>Budget Lines (Level 3)</relationshipLabel>
        <relationshipName>Budget_Lines1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Remaining_Amount__c</fullName>
        <formula>Program_Budget__r.Unallocated_Budget_Line_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Start_Date__c</fullName>
        <label>Recurring Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Start_Period__c</fullName>
        <label>Recurring_Start_Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Budget Lines</relationshipLabel>
        <relationshipName>Budget_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a One-Time Budget Request, or recurring request?</inlineHelpText>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <inlineHelpText>Required if Status = Rejected</inlineHelpText>
        <label>Reject Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retainer_Name__c</fullName>
        <label>Retainer Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Contract_Purchase_Request_Amt__c</fullName>
        <label>Rollup of Contract Purchase Request Amt</label>
        <summarizedField>Purchase_Request__c.Purchase_Request_Contractor_Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Request__c.Budget_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Purchase_Request_Amount__c</fullName>
        <label>Rollup of Purchase Request Amount</label>
        <summarizedField>Purchase_Request__c.Purchase_Request_Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Request__c.Budget_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Retainer__c</fullName>
        <label>Total Amount (Retainer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uncommitted_Approved_Budget__c</fullName>
        <formula>Budget_Line_Amount__c -  Rollup_of_Purchase_Request_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncommitted Approved Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uncommitted_Approved_Contractor_Budget__c</fullName>
        <formula>Contractor_Budget_Amount__c -  Rollup_of_Contract_Purchase_Request_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contractor Amount on this Budget Line minus the Total Purchase Request Amounts that have been created</inlineHelpText>
        <label>Uncommitted Approved Contractor Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Budget__c</columns>
        <columns>Budget_Line_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Lines</pluralLabel>
    <recordTypes>
        <fullName>Contractor_Spend</fullName>
        <active>true</active>
        <label>Contractor Spend</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Spend</fullName>
        <active>true</active>
        <label>Program Spend</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Budget_Line_Cannot_be_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISNEW(), ISCHANGED( Budget_Line_Amount__c )) ,Budget_Line_Amount__c &lt; 0,  NOT(OR( $User.Username = &apos;mchan@budget.com&apos;, $User.Username = &apos;mhristova@budget.com&apos;, $User.Username = &apos;epark@budget.com&apos;,$User.Username = &apos;mrosenbaum@budget.com&apos;, $User.Username = &apos;dchang@budget.com&apos;, $User.Username = &apos;skeane@budget.com&apos;, $User.Username = &apos;jbadanguio@budget.com&apos;, $User.Username=&apos;aalvarez@budget.com&apos;, $User.Username=&apos;dfebles@budget.com&apos;)))</errorConditionFormula>
        <errorDisplayField>Budget_Line_Amount__c</errorDisplayField>
        <errorMessage>You are not allowed to enter a negative amount.  Please contact Marlene Chan for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Budget_Line_Amount__c &lt;0,NOT(OR(ISPICKVAL(Budget_Type__c,&quot;MDF&quot;),ISPICKVAL(Budget_Type__c,&quot;Contingency&quot;))
)
)</errorConditionFormula>
        <errorDisplayField>Budget_Type__c</errorDisplayField>
        <errorMessage>Budget Type is required when Budget Line Amount is &lt; $0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_line_cannot_be_lower_than_prs</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISNEW(),ISCHANGED(Budget_Line_Amount__c)), Budget_Line_Amount__c&gt;=0,Budget_Line_Amount__c &lt;  Rollup_of_Purchase_Request_Amount__c)</errorConditionFormula>
        <errorDisplayField>Budget_Line_Amount__c</errorDisplayField>
        <errorMessage>The budget line cannot be less than the sum of the purchase request amounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Original_Budget_Amount</fullName>
        <active>false</active>
        <errorConditionFormula>OR( NOT(PRIORVALUE(Original_Budget_Line_Amount__c ) &lt;&gt; 0), NOT(ISNULL(Original_Budget_Line_Amount__c )))</errorConditionFormula>
        <errorMessage>You cannot update the Original Budget Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reject_Status</fullName>
        <active>true</active>
        <errorConditionFormula>text(Status__c)  = &quot;Rejected&quot;  &amp;&amp;   Reject_Reason__c  = &quot;&quot;</errorConditionFormula>
        <errorMessage>You must enter a Rejection Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;)), $Profile.Name &lt;&gt;&quot;System Administrator&quot;, ISPICKVAL(Status__c,&quot;Approved&quot;))</errorConditionFormula>
        <errorMessage>You are not allowed to update the Status to Approved.  Please submit an Approval Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Budget_cannot_exceed_Program</fullName>
        <active>true</active>
        <errorConditionFormula>OR((Program_Budget__r.Rollup_of_Unapproved_Budget_Lines__c  - PRIORVALUE(
Budget_Line_Amount__c ) + Budget_Line_Amount__c  &gt;  Program_Budget__r.Program_Budget_Amount__c), AND(ISNEW(), Program_Budget__r.Rollup_of_Unapproved_Budget_Lines__c  + Budget_Line_Amount__c  &gt;  Program_Budget__r.Program_Budget_Amount__c))</errorConditionFormula>
        <errorDisplayField>Budget_Line_Amount__c</errorDisplayField>
        <errorMessage>The Total sum of all budget line exceeds the Program Budget. You cannot make this change to the Budget Line. Please reduce another Budget Line before increasing this program.</errorMessage>
    </validationRules>
</CustomObject>